--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -1,6 +1,6 @@
 .btn {
 	background-color: #00BF6A;
-	color: #fff;
+	color: #000;
 	border: none;
 	text-align: center;
 	padding: 15px;
@@ -8,12 +8,12 @@
 
 .btn:hover {
 	background-color: #85FFC9;
-	color: #fff;
+	color: #000;
 	border: none;
 	text-align: center;	
 }
 
 h1 {
 	text-align: center;
- 	color: #47154A;
+ 	color: #702175;
 }
