--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -14,6 +14,12 @@
 }
 
 h1 {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
 	text-align: center;
  	color: #702175;
+}
+
+p {
+	font-family: 'Source Sans Pro', sans-serif;	
 }
