--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -1,7 +1,7 @@
 .btn {
 	background-color: #00BF6A;
 	color: #000;
-	border: none;
+	border: 1px solid #85FFC9;
 	text-align: center;
 	padding: 15px;
 }
@@ -9,7 +9,7 @@
 .btn:hover {
 	background-color: #85FFC9;
 	color: #000;
-	border: none;
+	border: 1px solid #fff;
 	text-align: center;	
 }
 
