--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -1,7 +1,7 @@
 .btn {
 	background-color: #00BF6A;
 	color: #000;
-	border: 1px solid #85FFC9;
+	border: 1px solid #fff;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
