--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -1,5 +1,5 @@
 .btn {
-	background-color: #00BF6A;
+	background-color: #00B263;
 	color: #000;
 	border: 1px solid #fff;
 	-webkit-border-radius: 5px;
