--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -10,7 +10,7 @@
 }
 
 .btn:hover {
-	background-color: #85FFC9;
+	background-color: #84E3B9;
 	color: #000;
 	border: 1px solid #fff;
 	-webkit-border-radius: 5px;
