--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -10,7 +10,7 @@
 }
 
 .btn:hover {
-	background-color: #ADE3CB;
+	background-color: #C2FFE4;
 	color: #000;
 	border: 1px solid #fff;
 	-webkit-border-radius: 5px;
