--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -27,5 +27,7 @@ h1 {
 }
 
 p {
-	font-family: 'Source Sans Pro', sans-serif;	
+	font-family: 'Source Sans Pro', sans-serif;
+	text-align: center;
+	padding: 10px;
 }
