--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -26,6 +26,13 @@ h1 {
  	color: #702175;
 }
 
+h2 {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
+	text-align: center;
+ 	color: #84278A;
+}
+
 p {
 	font-family: 'Source Sans Pro', sans-serif;
 	text-align: center;
