--- a/Styling/screen.css
+++ b/Styling/screen.css
@@ -10,7 +10,7 @@
 }
 
 .btn:hover {
-	background-color: #F2F2F2;
+	background-color: #E5E5E5;
 	color: #000;
 	border: 1px solid #fff;
 	-webkit-border-radius: 5px;
